<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Details" android:orientation="vertical">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="119dp" app:srcCompat="@drawable/university_surrounding" android:id="@+id/universityBackground"
            android:contentDescription="@string/utp_logo"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@drawable/personlogo" android:id="@+id/profileLogo"
            android:contentDescription="@string/profile_logo"/>
    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nameTextView" android:textSize="24sp" android:padding="10dp"
            android:layout_marginTop="20dp" android:layout_marginBottom="20dp" android:textColor="#000000"
            android:layout_margin="10dp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/emailTextView" android:textSize="24sp"
            android:padding="10dp" android:layout_marginTop="20dp" android:layout_marginBottom="20dp"
            android:textColor="#000000" android:layout_margin="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneNumberInput" android:textSize="24sp" android:hint="@string/phone_number"
            android:layout_margin="10dp" android:autofillHints=""/>
</LinearLayout>