<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:padding="20dp" android:orientation="vertical">
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@drawable/ucare_logo" android:id="@+id/UCareLogo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/ucare_logo" app:layout_constraintVertical_bias="0.039"/>
    <Button
            android:text="@string/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_details"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="openApp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/UCareLogo" app:layout_constraintBottom_toTopOf="@+id/button_aboutUs"/>
    <Button
            android:text="@string/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_aboutUs"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UCareLogo"
            android:onClick="aboutUs" app:layout_constraintVertical_bias="0.841"
            app:layout_constraintBottom_toTopOf="@+id/button_privacyPolicy"/>
    <Button
            android:text="@string/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_privacyPolicy"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="privacyPolicy" app:layout_constraintBottom_toTopOf="@+id/button_logOut"
            android:layout_marginBottom="40dp"/>
    <Button
            android:text="@string/button_logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_logOut"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/UCareLogo"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.95"
            android:onClick="logOut"/>
</androidx.constraintlayout.widget.ConstraintLayout>